{WIP} fix: make sidebar work properly on mobile

--- a/src/app/core/layout/sidebar/sidebar.component.scss
+++ b/src/app/core/layout/sidebar/sidebar.component.scss
@@ -1,5 +1,9 @@
 nav {
   background-color: var(--color-surface);
+
+  > div:first-of-type {
+    border-bottom: 1px solid var(--color-text-medium);
+  }
 }
 
 ul {
