--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -64,4 +64,5 @@ button {
   cursor: pointer;
   border: none;
   background: none;
+  color: var(--color-text)
 }
